Fix: Link overflow for entry link

--- a/src/components/SearchEntry/SearchEntry.css
+++ b/src/components/SearchEntry/SearchEntry.css
@@ -24,6 +24,7 @@
 .link {
     margin-top: 5px;
     font-size: 12px;
+    word-break: break-word;
 }
 
 .link a {
